# reflect

./: .gitignore  CMakeLists.txt  README.md
refl/: CMakeLists.txt
refl/include/: refl.hpp
refl/include/refl/: Member.hpp  Member.inl  Meta.hpp  Meta.inl
refl/include/refl/detail/: MetaHolder.hpp  template_helpers.hpp  template_helpers.inl
refl/optionnal/: refl_json.hpp  refl_json.inl
reflect/: CMakeLists.txt
reflect/include/: reflect.hpp
reflect/include/reflect/: Member.hpp  Member.inl  Meta.hpp  Meta.inl  function_trait.hpp
reflect/include/reflect/detail/: MetaHolder.hpp  template_helpers.hpp  template_helpers.inl
reflect/optionnal/: reflect_json.hpp  reflect_json.inl
sandbox/: CMakeLists.txt  main.cpp
